<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stMain" Id="{aea167d6-616d-4c44-a796-e5deb2a409be}">
    <Declaration><![CDATA[TYPE stMain :
	STRUCT
		bVar1 : BOOL;
		bVar2 : BOOL;
		fVar3 : LREAL;
		fVar4 : REAL;
		nVar5 : INT;
		nVar6 : DINT;
		nVar7 : stChild;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>